about us done, spacing and images +h2 to be fixed

--- a/pages/about_us/style.css
+++ b/pages/about_us/style.css
@@ -1,1 +1,6 @@
-
+.romyBio {
+  display: flex;
+}
+.educationRomy {
+  display: flex;
+}
